js is kinda cool

--- a/main.html
+++ b/main.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lucas Passos</title>
-    <link rel="stylesheet" href="sheets/style.css">
+    <link rel="stylesheet" href="sheets/style.css" />
+    <script src="scripts/carousel.js" defer></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=SUSE:wght@100..800&display=swap");
     </style>
   </head>
-  <body></body>
+  <body>
+    <div id="nameTitleCont">
+      <h1>Hello, <br />I'm Lucas🌟</h1>
+    </div>
+    <div id="mainCont">
+      <div id="carouselCont">
+        <svg height="100" width="100" xmlns="http://www.w3.org/2000/svg" id="ball1">
+          <circle r="45" cx="50" cy="50" fill="red" />
+        </svg>
+        <!--<div class="card" id="card1">
+          <img src="assets/html.svg" class="cardImg" />
+          html
+        </div>
+
+        <div class="card" id="card2">
+          <img src="assets/html.svg" class="cardImg" />
+          css
+        </div>
+
+        <div class="card" id="card3">
+          <img src="assets/html.svg" class="cardImg" />
+          js
+        </div>-->
+        <svg height="100" width="100" xmlns="http://www.w3.org/2000/svg" id="ball2">
+          <circle r="45" cx="50" cy="50" fill="red" />
+        </svg>
+      </div>
+    </div>
+  </body>
 </html>
